full-moon/tests/cases/fail/parser/table-1/error_display.snap
---
source: full-moon/tests/fail_cases.rs
assertion_line: 56
expression: "String::from_utf8(output.into_inner()).unwrap()"
input_file: full-moon/tests/cases/fail/parser/table-1
---
error[ast]: expected a field
  ┌─ source.lua:1:8
  │
1 │ return {
  │        ^


